--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -276,6 +276,15 @@ h1 {
 }
 
 /*------------------------------------*\
+    PAGE-SPECFIC TWEAKS
+\*------------------------------------*/
+
+/*hide page title of the home page*/
+#main > main > section > h1 {
+	display: none;
+}
+
+/*------------------------------------*\
     WORDPRESS CORE
 \*------------------------------------*/
 
