modifying author display for live site

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -408,6 +408,8 @@ a img.aligncenter {
 	}
 	h2,
 	h3 {
+		/*margin screws up the JS highlighting of the menu items*/
+		margin: 0;
 		page-break-after:avoid;
 	}
 }
