updated theme info for admin dashboard

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -1,11 +1,11 @@
 /*
-	Theme Name: HTML5 Blank
+	Theme Name: IfPA Custom
 	Theme URI: http://html5blank.com
-	Description: HTML5 Blank WordPress Theme
+	Description: Custom theme, built atop the HTML5 Blank WordPress theme (developed by Todd Motto).
 	Version: 1.4.3
-	Author: Todd Motto (@toddmotto)
-	Author URI: http://toddmotto.com
-	Tags: Blank, HTML5, CSS3
+	Author: Avi Nerenberg (@avinerenberg)
+	Author URI: http://avinerenberg.com
+	Tags: Blank, HTML5, CSS3, IfPA, AfPA
 
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
