--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -49,7 +49,7 @@ body {
 }
 img {
 	max-width: 100%;
-	vertical-align:bottom;
+	vertical-align: bottom;
 }
 a {
 	text-decoration:none;
@@ -225,8 +225,9 @@ button[role=button] {
     margin: auto;
 }
 
-/* footer */
+/* footer & copyright*/
 .footer {
+	padding: 20px 10px 0px 0px;
 	float: right;
 	color: #ACD9BB;
 }
@@ -235,20 +236,32 @@ button[role=button] {
 	color: #ACD9BB;
 }
 
+.copyright {
+	color: #2AAD69;
+}
+
+.copyright a {
+	color: #2AAD69;
+}
+
+.copyright a:hover {
+	color: #B0D8BC;
+}
+
 /*------------------------------------*\
     PAGES
 \*------------------------------------*/
 
-/* push all content to right w/ sidebar */
-#main {
+/* push all content to right w/ sidebar (DISABLED) */
+/*#main {
     transition: .3s;
     padding: 0px;
 }
 
 /* modify sidebar for smaller screens */
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
-}
+}*/
 
 .home-page {
 
@@ -263,21 +276,28 @@ button[role=button] {
 /* Home Page formating */
 
 .home-block {
-	display: inline;
+	display: flex;
+	flex-flow: row || nowrap;
+	justify-content: space-around;
+	align-items: center;
+	transition: .2s;
 }
 
-.copyright {
-	padding-right: 10px;
-	color: #2AAD69;
+.home-block-article {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	text-align: center;
+	font-size: 20px;
+	box-shadow: 0 0 10px 2px;
+	transition: .2s;
 }
 
-.copyright a {
-	color: #2AAD69;
+.home-block-article:hover {
+	transform: translateY(-5px);
 }
 
-.copyright a:hover {
-	color: #B0D8BC;
-}
 /*------------------------------------*\
     IMAGES
 \*------------------------------------*/
