--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -288,6 +288,7 @@ button[role=button] {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-end;
+	max-width: 300px;
 	text-align: center;
 	font-size: 20px;
 	box-shadow: 0 0 10px 2px;
