--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -191,7 +191,7 @@ button[role=button] {
 }
 
 /* sidebar */
-.sidebar {
+/*.sidebar {
 	height: 100%;
     width: 0;
     position: fixed;
@@ -205,7 +205,7 @@ button[role=button] {
 }
 
 /* sidebar links & behavior */
-.sidebar a {
+/*.sidebar a {
 	padding: 30px 10px;
     text-decoration: none;
     color: #ACD9BB;
@@ -268,7 +268,7 @@ button[role=button] {
 }
 
 *[role="main"] {
-	padding-left: 22px;
+	/*padding-left: 22px;*/
 	background-color: #FFF;
 	color: #2AAD69;
 }
@@ -289,7 +289,7 @@ button[role=button] {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-end;
-		text-align: center;
+	text-align: center;
 	font-size: 20px;
 	box-shadow: 0 0 10px 2px;
 	transition: .2s;
@@ -297,6 +297,28 @@ button[role=button] {
 
 .home-block-article:hover {
 	transform: translateY(-5px);
+}
+
+/*Issue menu on home page*/
+.issue-nav {
+	margin: auto;
+	margin-top: -20px;
+
+	max-width: 600px;
+	min-height: 120px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+.issue-nav a {
+	max-width: 60px;
+	transition-duration: .1s;
+}
+
+.issue-nav a:hover {
+	transform: scale(1.05);
 }
 
 /*------------------------------------*\
