--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -285,14 +285,19 @@ button[role=button] {
 
 .home-block-article {
 	max-width: 300px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-end;
+
 	text-align: center;
 	font-weight: bold;
 	font-size: 20px;
+
 	box-shadow: 0 0 10px 2px;
+	border-radius: 3px;
+
 	transition: .2s;
 }
 
@@ -322,17 +327,54 @@ button[role=button] {
 	transform: scale(1.05);
 }
 
+/*Blog Post Formatting*/
+
+.single > [id^="post-"] > a {
+	position: absolute;
+	width: 100%;
+	z-index: -1;
+}
+
+.single > [id^="post-"] > a > img {
+	width: 100%;
+}
+
+#article-overlay {
+	width: 100%;
+	position: absolute;
+	margin-top: 30%;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+#content {
+	text-align: justify;
+	color: #2AAD69;
+	width: 80%;
+	font-size: 1.5em;
+
+	padding: 5px 30px;
+	border-radius: 20px;
+	box-shadow: 0 0 20px #000;
+	background-color: #FFF;
+
+	margin-bottom: 20px;
+}
+
+article > .footer { /*because articles in single.php are removed from the document flow (position: absolute)*/
+	padding: 0;
+
+	position: relative;
+	top: 40px;
+	font-size: 11px;
+}
+
 /*------------------------------------*\
     IMAGES
 \*------------------------------------*/
-[id^="post-"] > a {
-	margin: auto;
-}
-
-[id^="post-"] > a > img {
-	width: 80%;
-	margin: auto;
-}
 
 /*------------------------------------*\
 	TYPOGRAPHY
