modifying homepage gallery imgs

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -381,6 +381,10 @@ article > .footer { /*because articles in single.php are removed from the docume
     IMAGES
 \*------------------------------------*/
 
+.tiled-gallery-caption {
+	white-space: normal;
+}
+
 /*------------------------------------*\
 	TYPOGRAPHY
 \*------------------------------------*/
