modifying homepage gallery imgs

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -382,6 +382,8 @@ article > .footer { /*because articles in single.php are removed from the docume
 \*------------------------------------*/
 
 .tiled-gallery-caption {
+	font-size: 35px !important;
+	color: #2AAD69 !important;
 	white-space: normal !important;
 }
 
