--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -392,9 +392,17 @@ article > .footer { /*because articles in single.php are removed from the docume
 \*------------------------------------*/
 /*for infographics gallery*/
 .tiled-gallery-item {
-	border-width: 2px;
+	margin: 0px !important;
+
+	border-width: 1px;
 	border-style: solid;
 	border-color: #2AAD69;
+
+	transition-duration: .1s;
+}
+
+.tiled-gallery-item:hover {
+	transform: scale(1.05);
 }
 
 /*for attachments/imgs that are reached through the searchbar*/
