moving content around

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -254,7 +254,7 @@ button[role=button] {
 .column {
 	display: inline-block;
 	width: 33%;
-
+	
 	vertical-align: top;
 	text-align: center;
 	list-style-type: none;
@@ -280,8 +280,8 @@ button[role=button] {
   .sidebar {padding-top: 15px;}
 }*/
 
-.page {
-	text-align: center;
+.home-page {
+
 }
 
 *[role="main"] {
