--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -287,6 +287,7 @@ button[role=button] {
 .footer {
 	display: inline-block;
 	width: 100%;
+
 	padding-top: 20px;
 	background-color: #2AAD69;
 
@@ -338,6 +339,8 @@ button[role=button] {
 	flex-flow: row || nowrap;
 	justify-content: space-around;
 	align-items: center;
+	margin-bottom: 15px;
+
 	transition: .2s;
 }
 
@@ -394,7 +397,6 @@ button[role=button] {
 .thumbnail {
 	position: absolute;
 	width: 100%;
-	max-height: 
 	z-index: -1;
 	top: 85px;
 }
@@ -405,16 +407,17 @@ button[role=button] {
 	z-index: -1;
 }
 
+/*for thumbnails on article pages*/
 .single > [id^="post-"] > a > img {
 	width: 100%;
-	max-height: 500px;
-	overflow: hidden;
+	max-height: 35vw;
+	object-fit: cover;
 }
 
 #article-overlay {
 	width: 100%;
 	position: static;
-	margin-top: 20%;
+	margin-top: 35vw;
 
 	display: flex;
 	flex-direction: column;
@@ -429,6 +432,7 @@ button[role=button] {
 	width: 80%;
 	font-size: 1.5em;
 
+	margin-top: -150px;
 	padding: 5px 30px;
 	border-radius: 20px;
 	box-shadow: 0 0 20px #000;
