--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -306,6 +306,7 @@ button[role=button] {
 .column {
 	display: inline-block;
 	width: 10%;
+	min-width: 100px;
 	padding-left: 5%;
 
 	vertical-align: top;
@@ -336,7 +337,7 @@ button[role=button] {
 
 .home-block {
 	display: flex;
-	flex-flow: row || nowrap;
+	flex-flow: row wrap;
 	justify-content: space-around;
 	align-items: center;
 	margin-bottom: 15px;
@@ -346,6 +347,7 @@ button[role=button] {
 
 .home-block-article {
 	max-width: 300px;
+	margin-bottom: 20px;
 
 	display: flex;
 	flex-direction: column;
@@ -438,7 +440,7 @@ button[role=button] {
 	margin-top: -150px;
 	padding: 5px 30px;
 	border-radius: 20px;
-	box-shadow: 0 0 20px #000;
+	box-shadow: 0 0 10px #555;
 	background-color: #FFF;
 
 	margin-bottom: 20px;
