--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -529,6 +529,10 @@ p.attachment {
 	.loop-thumbnail {
 	display: none;
 	}
+
+	#content {
+		margin-top: -50px;
+	}
 }
 @media only screen and (max-width:1200px) {
 	#menu-icon {
