--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -465,6 +465,22 @@ h1 > a:hover {
 	font-size: 11px;
 }*/
 
+/* LOOP SETTINGS (loop.php) */
+
+.loop-thumbnail {
+	display: flex;
+	justify-content: center;
+	float: left;
+
+	height: 200px;
+	width: 300px;
+}
+
+.loop-thumbnail > img {
+	box-shadow: 0 0 10px #555;
+	border-radius: 3px;
+}
+
 /*------------------------------------*\
     IMAGES
 \*------------------------------------*/
