playing with fonts

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -31,7 +31,7 @@ html {
 	font-size:62.5%;
 }
 body {
-	font:300 11px/1.4 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font:300 11px/1.4 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 	background-color: #FFF;
 }
 /* clear */
